Bug 207040 - REGRESSION (r240250): Pages using smoothscroll.js can't be scrolled with trackpad
Summary: REGRESSION (r240250): Pages using smoothscroll.js can't be scrolled with trac...
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: DOM (show other bugs)
Version: WebKit Nightly Build
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Nobody
URL:
Keywords: InRadar
: 203003 (view as bug list)
Depends on:
Blocks:
 
Reported: 2020-01-31 05:13 PST by Antti Koivisto
Modified: 2022-06-20 12:01 PDT (History)
8 users (show)

See Also:


Attachments
patch (7.22 KB, patch)
2020-01-31 05:59 PST, Antti Koivisto
no flags Details | Formatted Diff | Diff
patch (7.24 KB, patch)
2020-01-31 06:43 PST, Antti Koivisto
no flags Details | Formatted Diff | Diff
patch (7.23 KB, patch)
2020-01-31 07:00 PST, Antti Koivisto
no flags Details | Formatted Diff | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Antti Koivisto 2020-01-31 05:13:34 PST
Copy a Chromium intervention
Comment 1 Antti Koivisto 2020-01-31 05:13:56 PST
<rdar://problem/52712513>
Comment 2 Antti Koivisto 2020-01-31 05:59:45 PST
Created attachment 389343 [details]
patch
Comment 3 Antti Koivisto 2020-01-31 06:43:17 PST
Created attachment 389344 [details]
patch
Comment 4 Antti Koivisto 2020-01-31 07:00:09 PST
Created attachment 389345 [details]
patch
Comment 5 WebKit Commit Bot 2020-01-31 09:07:20 PST
Comment on attachment 389345 [details]
patch

Clearing flags on attachment: 389345

Committed r255499: <https://trac.webkit.org/changeset/255499>
Comment 6 WebKit Commit Bot 2020-01-31 09:07:22 PST
All reviewed patches have been landed.  Closing bug.
Comment 7 Michael Catanzaro 2020-03-20 13:25:43 PDT
*** Bug 203003 has been marked as a duplicate of this bug. ***