REGRESSION (r240250): Pages using smoothscroll.js can't be scrolled with trackpad https://bugs.webkit.org/show_bug.cgi?id=207040 <rdar://problem/52712513>

Reviewed by Simon Fraser.

Add a quirk that makes the wheel event listener used by smoothscroll.js passive so it can't prevent scrolling.

This uses the same logic as the Chromium intervention in
https://chromium.googlesource.com/chromium/src/+/b6b13c9cfe64d52a4168d9d8d1ad9bb8f0b46a2a%5E%21/

* bindings/js/JSEventListener.cpp:
(WebCore::JSEventListener::functionName const):
* bindings/js/JSEventListener.h:
* dom/EventTarget.cpp:
(WebCore::EventTarget::addEventListener):
* page/Quirks.cpp:
(WebCore::Quirks::shouldMakeEventListenerPassive const):

Also factor the existing code for making some touch event listeners passive here.

* page/Quirks.h:


Canonical link: https://commits.webkit.org/220060@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@255499 268f45cc-cd09-0410-ab3c-d52691b4dbfc